<resources>
    <string name="app_name">Goods</string>
    <string name="tvLoginTitle">Welcome back!</string>
    <string name="tvLoginDesc">You\'ve been missed,\nPlease sign in your account.</string>
    <string name="tvDummyTitle">Dummy Title</string>
    <string name="tvInputTextError">This form is required</string>
    <string name="tvETHintEmail">Email</string>
    <string name="tvETHintPassword">Password</string>
    <string name="btnTxtLogin">Login</string>
    <string name="tvDummy_ToolbarTitle">Dummy Title</string>
    <string name="tvTestQTI">TEST QTI</string>
    <string name="tvDummyUsername">Dummy Username</string>
    <string name="tvDummyEmail">dummyusername@goods.com</string>
    <string name="btnTxtLogout">Logout</string>
    <string name="menuTitleHome">Home</string>
    <string name="menuTitleAsset">Asset</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_asset_fragment">Hello asset fragment</string>
    <string name="popupLoginSuccessTitle">Log In Successful</string>
    <string name="popupLoginFailedTitle">Log In Failed</string>
    <string name="popupLoginSuccessDesc">You have successfully logged in.\nWelcome back!</string>
    <string name="popupLoginFailedDesc">Please check your credentials and try again</string>
    <string name="popupQuestionLogoutTitle">Logout</string>
    <string name="popupQuestionLogoutDesc">When you want to use this app,\nyou have to relogin, are you sure?</string>
    <string name="btnPopupQuestionLogoutPositive">Logout</string>
    <string name="btnPopupQuestionLogoutNegative">Cancel</string>
    <string name="popupLogoutSuccessTitle">Success!</string>
    <string name="popupLogoutSuccessDesc">You\'ve successfully logged out.\nPlease come back anytime.</string>
    <string name="popupLogoutFailedTitle">Failed!</string>
    <string name="popupLogoutFailedDesc">Unable to log you out at this time.\nPlease try again later.</string>
    <string name="popupUnauthorizedTitle">Session has Expired</string>
    <string name="popupUnauthorizedDesc">Please log in to continue</string>
    <string name="popupCreateAssetSuccessTitle">Success!</string>
    <string name="popipCreateAssetSuccessDesc">Data has been submitted.</string>
    <string name="popupCreateAssetFailedTitle">Error!</string>
    <string name="popupCreateAssetFailedDesc">Submission failed. Please try again later.</string>
    <string name="popupUpdateAssetSuccessDesc">Data has been update.</string>
    <string name="popupUpdateAssetFailedDesc">Update data failed. Please try again later.</string>
    <string name="popupDummyQuestionTitle">Dummy Title</string>
    <string name="popupDummyQuestionDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="btnPopupDummyQuestionPositive">Positive</string>
    <string name="btnPopupDummyQuestionNegative">Negative</string>
    <string name="popupQuestionDeleteAssetTitle">Confirmation</string>
    <string name="popupQuestionDeleteAssetDesc">Your action will cause this data\npermanently deleted. </string>
    <string name="btnPopupQuestionDeleteAssetPositive">Delete</string>
    <string name="btnPopupQuestionDeleteAssetNegative">Cancel</string>
    <string name="popupDeleteAssetSuccessTitle">Success!</string>
    <string name="popupDeleteAssetSuccessDesc">Data has been Deleted.</string>
    <string name="popupDeleteAssetFailedTitle">Failed!</string>
    <string name="popupDeleteAssetFailedDesc">Data failed to delete.\nTry again later.</string>
    <string name="tvListAssetTitle">List Asset</string>
    <string name="tvAssetNameTitle">Asset Name</string>
    <string name="tvDummyAssetName">Dummy Aset</string>
    <string name="isvTxtSearch">Search asset</string>
    <string name="toastTextEmptyAssetSearch">No results for the requested asset</string>
    <string name="tvStatusTitle">Status</string>
    <string name="tvStatusSold">Asset Sold</string>
    <string name="tvStatusInStock">Asset In Stock</string>
    <string name="tvStatusExpired">Expired Asset</string>
    <string name="tvDummyStatusValue">X</string>
    <string name="tvLocationTitle">Location</string>
    <string name="tvLocationGudang">Gudang</string>
    <string name="tvLocationRak">Rak Penjualan</string>
    <string name="tvDummyLocationValue">Y</string>
    <string name="chartTitle">Chart</string>
    <string name="tvInputAssetDesc">Fill this form below</string>
    <string name="tvDummyDropdownOption">Dummy Option</string>
    <string name="tvDummyDropdownTitle">Dummy Title</string>
    <string name="btnTxtSubmit">Submit</string>
    <string name="dropdownTitleStatus">Status</string>
    <string name="dropdownTitleLocation">Location</string>
    <string name="dropdownHintStatus">Select status</string>
    <string name="dropdownHintLocation">Select location</string>
    <string name="tvInputAssetName">Asset Name</string>
    <string name="tvInputHintAssetName">Input Name</string>
    <string name="cabInputAssetTitle">Input Asset</string>
    <string name="btnTxtUpdateAsset">Save Update</string>
    <string name="btnTxtDeleteAsset">Delete</string>
</resources>